init java study

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-/.metadata/
+.metadata
+
+## maven
+**/*/target
+**/*/build
+**/*/out
+
+## eclipse
+**/*/.settings
+**/*/.classpath
+**/*/.project
