--- a/java-study/pom.xml
+++ b/java-study/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.poscodx</groupId>
   <artifactId>java-study</artifactId>
@@ -14,6 +14,6 @@
   
   <modules>
   	<module>practice01</module>
-  	<module>pratice02</module>
+  	<module>practice02</module>
   </modules>
 </project>
