--- a/java-study/pom.xml
+++ b/java-study/pom.xml
@@ -15,5 +15,6 @@
   <modules>
   	<module>practice01</module>
   	<module>practice02</module>
+  	<module>chapter03</module>
   </modules>
 </project>
