--- a/java-study/pom.xml
+++ b/java-study/pom.xml
@@ -20,5 +20,6 @@
   	<module>practice04</module>
   	<module>practice05</module>
   	<module>chapter04</module>
+  	<module>designpattern-practices</module>
   </modules>
 </project>
