--- a/java-study/pom.xml
+++ b/java-study/pom.xml
@@ -21,5 +21,6 @@
   	<module>practice05</module>
   	<module>chapter04</module>
   	<module>designpattern-practices</module>
+  	<module>network</module>
   </modules>
 </project>
