--- a/mariadb-practices/jdbc-practices/pom.xml
+++ b/mariadb-practices/jdbc-practices/pom.xml
@@ -13,4 +13,25 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
+	
+	
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<!-- 의존성 설치
+		 <dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.33</version>
+		</dependency>
+		-->
+		
+		<!-- org.mariadb.jdbc.Driver 연결을 위해서
+	         근데, mariadb를 지원을 안해서 안씀~ -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+		
+	</dependencies>
 </project>
