Feat: Add servlet library dependency

--- a/servlet-practices/helloweb/pom.xml
+++ b/servlet-practices/helloweb/pom.xml
@@ -16,12 +16,33 @@
 	</properties>
 	
 	<dependencies>
+		<!-- mariadb jbdc-->
 		<!-- org.mariadb.jdbc.Driver 연결을 위해서 -->
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		
+		<!-- servlet -->
+		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+		<dependency>
+		    <groupId>javax.servlet.jsp</groupId>
+		    <artifactId>jsp-api</artifactId>
+		    <version>2.2</version>
+		    <scope>provided</scope>
+		</dependency>
+
+
+		
 	</dependencies>
 
 	<build>
