--- a/servlet-practices/helloweb/pom.xml
+++ b/servlet-practices/helloweb/pom.xml
@@ -40,13 +40,22 @@
 		    <version>2.2</version>
 		    <scope>provided</scope>
 		</dependency>
-
-
-		
 	</dependencies>
 
 	<build>
 		<finalName>helloweb</finalName>
+		
+		<plugins>
+			<plugin>
+				 <groupId>org.apache.tomcat.maven</groupId>
+		  		 <artifactId>tomcat7-maven-plugin</artifactId>
+		   		 <version>2.2</version>
+		   		 <configuration>
+					<url>${tomcat.deploy.url}</url>
+					<server>tomcat-poscodx</server>
+				 </configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
