--- a/servlet-practices/helloweb/src/main/webapp/WEB-INF/web.xml
+++ b/servlet-practices/helloweb/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,11 @@
     <servlet-name>HelloServlet</servlet-name>
     <servlet-class>helloweb.HelloServlet</servlet-class>
   </servlet>
-  
   <servlet-mapping>
     <servlet-name>HelloServlet</servlet-name>
     <url-pattern>/hello</url-pattern>
   </servlet-mapping>
-  
-   <welcome-file-list>
+  <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -19,4 +17,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>CookieServlet</display-name>
+    <servlet-name>CookieServlet</servlet-name>
+    <servlet-class>helloweb.CookieServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CookieServlet</servlet-name>
+    <url-pattern>/cookie</url-pattern>
+  </servlet-mapping>
 </web-app>
