--- a/mysite/mysite2/pom.xml
+++ b/mysite/mysite2/pom.xml
@@ -40,6 +40,13 @@
 		    <version>2.2</version>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
