--- a/spring-practices/emaillist3/src/main/webapp/WEB-INF/web.xml
+++ b/spring-practices/emaillist3/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
   
-	 <!--  Encoding UTF-8  -->
+	 <!-- Character Encoding filter -->
 	 <filter>
 	   <filter-name>encodingFilter</filter-name>
 	   <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -27,12 +27,10 @@
 	      <param-value>true</param-value>
 	   </init-param>
 	</filter>  
-	   
 	<filter-mapping>
 	   <filter-name>encodingFilter</filter-name>
 	   <url-pattern>/*</url-pattern>
 	</filter-mapping>
-  
   
   <!-- Dispatcher Servlet -->
   <servlet>
@@ -43,7 +41,6 @@
 		<param-value>/WEB-INF/spring-servlet.xml</param-value>
 	</init-param>
   </servlet>
-  
   <servlet-mapping>
 	  <servlet-name>dispatcher-servlet</servlet-name>
 	  <url-pattern>/</url-pattern>
