--- a/spring-practices/guestbook3/pom.xml
+++ b/spring-practices/guestbook3/pom.xml
@@ -23,6 +23,20 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		<!-- spring jdbc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
+		<!-- Common DBCP -->
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 		<!-- mariadb jbdc-->
 		<!-- org.mariadb.jdbc.Driver 연결을 위해서 -->
 		<dependency>
