--- a/jblog/pom.xml
+++ b/jblog/pom.xml
@@ -20,5 +20,7 @@
   </build>
   <modules>
   	<module>jblog3</module>
+  	<module>jblog4</module>
+  	<module>jblog5</module>
   </modules>
 </project>
