--- a/frontend-dev-basics/pom.xml
+++ b/frontend-dev-basics/pom.xml
@@ -6,5 +6,8 @@
   <packaging>pom</packaging>
   <modules>
   	<module>ch02</module>
+  	<module>ch03</module>
+  	<module>ch05</module>
+  	<module>ch04</module>
   </modules>
 </project>
