--- a/frontend-dev-basics/pom.xml
+++ b/frontend-dev-basics/pom.xml
@@ -9,5 +9,8 @@
   	<module>ch03</module>
   	<module>ch05</module>
   	<module>ch04</module>
+  	<module>ch06</module>
+  	<module>ch07</module>
+  	<module>ch08</module>
   </modules>
 </project>
