--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
+## npm
+**/*/node_modules
+
 # *.iml
 # modules.xml
 # .idea/misc.xml
