--- a/react-practices/03.Component/ex02/package.json
+++ b/react-practices/03.Component/ex02/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ex01",
+  "name": "ex02",
   "version": "1.0.0",
-  "description": "Component 작성 및 Property",
+  "description": "Component Styling",
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve --config config/webpack.config.js --progress --mode development --env",
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "prop-types": "^15.8.1",
-    "proptypes": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.77.7"
+    "sass": "^1.77.8",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
