--- a/mysite/mysite2/pom.xml
+++ b/mysite/mysite2/pom.xml
@@ -49,6 +49,17 @@
 
 	<build>
 		<finalName>mysite2</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+		    	<artifactId>tomcat7-maven-plugin</artifactId>
+		    	<version>2.2</version>
+		    	<configuration>
+					<url>${tomcat.deploy.url}</url>
+					<server>tomcat-poscodx</server>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 	
 </project>
