--- a/react-practices/03.Component/ex05/package.json
+++ b/react-practices/03.Component/ex05/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.77.8",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -22,7 +23,6 @@
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
-    "node-sass": "^9.0.0",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
