Refactor: Update emaillist08 to fetch data from API

--- a/react-practices/emaillist08/frontend/config/babel.config.json
+++ b/react-practices/emaillist08/frontend/config/babel.config.json
@@ -1,16 +1,22 @@
 {
-    "presets": [
-        ["@babel/preset-env", {
-            "targets": {
-                "ie": 11,
-                "edge": "126",
-                "firefox": "127",
-                "chrome": "126",
-                "opera": "98",
-                "safari": "17"
-            }
-        }],
-        "@babel/preset-react"
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "ie": 11,
+          "edge": "126",
+          "firefox": "127",
+          "chrome": "126",
+          "opera": "98",
+          "safari": "17"
+        }
+      }
     ],
-    "plugins": []
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-syntax-throw-expressions"
+  ]
 }
