--- a/react-practices/emaillist08/frontend/package.json
+++ b/react-practices/emaillist08/frontend/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-syntax-throw-expressions": "^7.24.7",
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
